--- a/korui1/index.html
+++ b/korui1/index.html
@@ -1,4 +1,9 @@
 <html>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+</head>
 <body>
 <script src="program.js"></script>
 </body>
